force-app/main/default/objects/RV_ModelSizeFlow__c/RV_ModelSizeFlow__c.object-meta.xml
<CustomObject>
    <label>RV_ModelSizeFlow</label>
    <nameField>
        <label>RV_ModelSizeFlow</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV_ModelSizeFlow</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>