force-app/main/default/objects/RV_ModelSizeFlow__c/fields/KD__c.field-meta.xml
<CustomField>
    <fullName>KD__c</fullName>
    <label>KD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>