force-app/main/default/objects/RV_ModelSizeFlow__c/fields/PressureRatio__c.field-meta.xml
<CustomField>
    <fullName>PressureRatio__c</fullName>
    <label>PressureRatio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>