force-app/main/default/objects/RV_ModelSizeFlow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>Direction__c</columns>
    <columns>PressureRatio__c</columns>
    <columns>KD__c</columns>
    <columns>CertificationId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>